Fixed spacing issues

--- a/static/assets/scss/components/_hexagon-hero.scss
+++ b/static/assets/scss/components/_hexagon-hero.scss
@@ -47,7 +47,7 @@
   }
 
   &__beach {
-    height: 80vh;
+    height: 85vh;
     min-height: 350px;
     background-color: $beach-tan;
     transform: skewY(-30deg);
